# file-integrity-checker

./: .gitignore  Cargo.toml  README.md  install
.devcontainer/: devcontainer.json  post-create
src/: main.rs  modules.rs
src/modules/: db.rs  hash_files.rs
